--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 POSTGRES_DB = 'your_db'
 POSTGRES_USER = 'your-username'
 POSTGRES_PASSWORD = 'your_password'
+
+
+#settings 
+DB_NAME=mydatabase
+DB_USER=myuser
+DB_PASSWORD=mypassword
+DB_HOST=localhost
+DB_PORT=5432
+DEBUG=True
